--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -164,6 +164,14 @@ table{
     }
 }  
 
+/*DragInputFiles  */
+.my-drop-zone { 
+    border: dotted 3px lightgray; 
+    height: 100px;
+    background-color: #f5f5f5;
+}      
+   
+
 /* Status Filters Bar */
 .status-filter {    
     position: relative;    
@@ -228,4 +236,6 @@ table{
     /* Required for text-overflow to do anything */
     white-space: nowrap;
     overflow: hidden;
-  }
+}
+  
+  
