--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -405,7 +405,7 @@
                                   <label for="file-multiple-input">
                                     <div class="btn btn-pill btn-primary">Subir Documento</div>
                                   </label>
-                                  <input (change)="onFileChanged()" style="display: none;" id="file-multiple-input" multiple="" type="file">
+                                  <input (change)="onFileChanged($event)" style="display: none;" id="file-multiple-input" multiple="" type="file">
                                 </div>                                
                               </div>
 
