--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -59,8 +59,8 @@
                     <ngx-mat-select-search [(ngModel)]="instruccionesManejoSearch" [placeholderLabel]="'Estatus'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
                   </mat-option>
                   <mat-option>Ninguno</mat-option>                    
-                  <mat-option *ngFor="let option of instruccionesManejoCatalogo | filterSelect: instruccionesManejoSearch" [value]="option.value"> 
-                    {{option.value}} - {{option.text}}
+                  <mat-option *ngFor="let option of instruccionesManejoCatalogo | filterSelect: instruccionesManejoSearch" [value]="option.ClaveInstruccion"> 
+                    {{option.ClaveInstruccion}} - {{option.Descripcion}}
                   </mat-option>
                 </mat-select>                  
               </mat-form-field>
@@ -216,7 +216,7 @@
             <ng-container matColumnDef="Acciones">
               <th mat-header-cell *matHeaderCellDef> Acciones </th>
               <td mat-cell *matCellDef="let element"> 
-                <a class="btn btn-pill btn-ghost-link" (click)="detalleModal.show(); verDetalle(element.IdAdelantoPrevios);" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a>
+                <a class="btn btn-pill btn-ghost-link" (click)="detalleModal.show(); verDetalle(element.IdPrealerta);" href="javascript: void(0);"><i class="fas fa-plus-circle"></i> Detalle</a>
               </td>
             </ng-container>
 
